# app/src/modules/posts/dto/post-create.dto.ts
@@ -1,0 +1,5 @@
+export interface PostCreateDto {
+  content: string;
+  image_url: string;
+  user_id?: number;
+}
